--- a/styles/contato.css
+++ b/styles/contato.css
@@ -1,6 +1,7 @@
 .contato{
     background-color: var(--branco);
     padding: 1em;
+    
 }
 
 .contato_titulo, .contato_texto{
@@ -33,4 +34,26 @@
     color: var(--azul);
     background: url("../img/email.svg") no-repeat;
     padding-left: 2em;
+}
+
+@media screen and (min-width: 1024px) {
+    .contato{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contato_titulo{
+        font-size: 24px;
+      
+    }
+
+    .contato_descrição{
+        margin-right: 1em;
+        width: 30%;
+    }
+
+    .contato_email{
+        width: 30%;
+    }
 }
