--- a/styles/header.css
+++ b/styles/header.css
@@ -59,6 +59,58 @@
     display: none;
 }
 
+.container_titulo{
+    display: none;
+}
+
+.opções{
+    display: none;
+}
+
+ /*Modo Responsivo */
 @media screen and (min-width:1024px) {
-    
+    .container_titulo, .container_titulo--negrito{
+        font-family: var(--font-secundaria);
+        font-size: 30px;
+    }
+
+    .container_titulo{
+        font-weight: 400;
+        display: block;
+    }
+
+    .container_titulo--negrito{
+        font-weight: 700;
+    }
+
+    .opções{
+        display: flex;
+    }
+
+    .opções_item{
+        padding: 0 1em;
+        text-transform: uppercase;
+    }
+
+    .opções_link{
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .container_imagem-transparent{
+        display: none;
+    }
+
+    .cabeçalho_menu-hamburguer{
+        display: none;
+    }
+
+    .opções_botão:checked~.lista-menu{
+        display: block;
+        width: auto;
+    }
+
+    .opções_botão{
+        display: none;
+    }
 }
