--- a/styles/header.css
+++ b/styles/header.css
@@ -67,6 +67,10 @@
     display: none;
 }
 
+.container_texto{
+    display: none;
+}
+
  /*Modo Responsivo */
 @media screen and (min-width:1024px) {
     .container_titulo, .container_titulo--negrito{
@@ -114,3 +118,28 @@
         display: none;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .container_link{
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .cabeçalho{
+        padding: 0 2em;
+    }
+
+
+    .opções{
+        margin-right: auto;
+    }
+
+    .container_texto{
+        display: block;
+    }
+
+}
+
+
