--- a/styles/header.css
+++ b/styles/header.css
@@ -6,6 +6,13 @@
     background-position: center;
     display:inline-block;
 }
+    .container_botao:checked ~ .container_rotulo > .cabeçalho_menu-hamburguer{
+        background-image: url(../img/Menu\ Aberto.png);
+    }
+
+    .container_botao:checked ~ .container_rotulo{
+        background: var(--azul-degrade);
+    }
 
 .cabeçalho{
     background-color: var(--branco);
@@ -116,6 +123,24 @@
 
     .opções_botão{
         display: none;
+    }
+
+    .opções_botão:checked ~ .opções_rotulo > .opções_item{
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
+
+    .opções_item{
+        padding: 2em 1em;
+    }
+
+    .lista-menu_item:hover{
+        background: var(--azul-degrade);
+    }
+
+    .lista-menu_item:hover > .lista-menu_link{
+        -webkit-text-fill-color:  var(--branco);
+        text-decoration: none;
     }
 }
 
